...
                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bJa-bV-Uvb" userLabel="Image">
                                                    <rect key="frame" x="16" y="4" width="361" height="122"/>
                                                    <color key="backgroundColor" name="YP Black"/>
                                                </imageView>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="74E-xc-4pj" userLabel="Like Button">
                                                    <rect key="frame" x="333" y="4" width="44" height="44"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="LikeButton"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="44" id="GFC-Yb-4qU"/>
                                                        <constraint firstAttribute="width" constant="44" id="pCh-R9-p6i"/>
                                                    </constraints>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" image="LikeActive"/>
...
                                <viewLayoutGuide key="contentLayoutGuide" id="urL-lz-MaP"/>
                                <viewLayoutGuide key="frameLayoutGuide" id="zxk-bk-Cgb"/>
                                <connections>
                                    <outlet property="delegate" destination="9yT-Gl-wly" id="Bik-iz-mtf"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="unz-AY-fkO" userLabel="BackButton">
                                <rect key="frame" x="8" y="70" width="24" height="24"/>
                                <accessibility key="accessibilityConfiguration" identifier="BackButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="24" id="1JT-N1-Bez"/>
                                    <constraint firstAttribute="width" constant="24" id="9of-eT-kFH"/>
                                </constraints>
...
                                    <constraint firstAttribute="height" constant="60" id="kR9-i1-0Yh"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QQU-BH-bXK" userLabel="LoginButton">
                                <rect key="frame" x="16" y="646" width="361" height="48"/>
                                <color key="backgroundColor" name="YP White"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="M6B-at-npb"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Войти">
...
