...
        view?.setNicknameLabel(profileService.profile?.loginName)
        view?.setDescriptionLabel(profileService.profile?.bio)
    }

    func logoutButtonTouched() {
        let alert = UIAlertController(
            title: "Пока, пока!",
            message: "Уверены, что хотите выйти?",
            preferredStyle: .alert
        )
        alert.addAction(UIAlertAction(title: "Нет", style: .default))
        alert.addAction(
            UIAlertAction(title: "Да", style: .cancel) { [weak self] _ in
                self?.logoutService.logout()
                self?.switchToSplash()
            }
        )

        view?.showAlert(alert)
...
